results-summary: fixed summary text align

--- a/results-summary/styles/style.css
+++ b/results-summary/styles/style.css
@@ -87,6 +87,11 @@ body {
   font-size: 13px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.summary ul li i {
+  margin-right: 5px;
 }
 
 .summary button {
